# matus-app

./: CMakeLists.txt  README.md  example-services.config  manifest_example.json
inc/: message.hpp
ipc/fidl/: example.fdepl  example.fidl
src/: main.cpp  message.cpp
